# python-odt-template

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  t.py
example/: manage.py  mycheckin.odt
example/example/: asgi.py  settings.py  urls.py  wsgi.py
samples/: checkin.odt  output.odt  simple_template_rendered.odt  template.odt  test.py  test_odt.py
samples/inputs/: checkin.odt  simple_template.odt  template.odt
samples/outputs/: simple_template_rendered.odt  template_rendered.odt
secretary/: test_secretary.py
secretary_2/: rendered.odt  secretary.py
src/python_odt_template/: __about__.py  __init__.py  django.py  dtl.py  filters.py  jinja.py  jinja_filters.py  libreoffice.py  markdown_map.py  odtfile.py  renderer.py  template.py  unoserver.py
